# text-manipulations-py

./: .gitignore  LICENSE  Makefile  README.md  pylintrc  pyproject.toml
.github/workflows/: build-publish.yml  ci.yml
tests/: test_shave_marks.py
text_manipulations/: __init__.py
