[project]
name = "text-manipulations"
version = "0.1.0"
description = "Tools to manipulate text"
authors = [
    {name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.8.0",
    "pytest>=7.1.3",
    "pytest-cov>=3.0.0",
    "pylint>=2.15.3",
    "mypy>=0.981",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
